Update plugin settings names

--- a/sample/Config/DefaultEngine.ini
+++ b/sample/Config/DefaultEngine.ini
@@ -202,6 +202,6 @@ bGeneratedSYMFile=True
 bGeneratedSYMBundle=True
 
 [/Script/Sentry.SentrySettings]
-DsnUrl="https://93c7a68867db43539980de54f09b139a@o447951.ingest.sentry.io/6253052"
 CrashReporterUrl="https://o447951.ingest.sentry.io/api/6253052/unreal/93c7a68867db43539980de54f09b139a/"
+Dsn="https://93c7a68867db43539980de54f09b139a@o447951.ingest.sentry.io/6253052"
 
