--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -37,7 +37,7 @@ jobs:
   cli:
     uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
     with:
-      path: modules/sentry-cli.properties
+      path: plugin-dev/sentry-cli.properties
       name: CLI
     secrets:
       api-token: ${{ secrets.CI_DEPLOY_KEY }}
