--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,32 +43,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: Android-sdk
           path: plugin-dev/Source/ThirdParty/Android
 
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: Android-libraries
           path: modules/sentry-java/sentry-android-ndk/build/intermediates/merged_native_libs/release/out/lib
 
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: IOS-sdk
           path: plugin-dev/Source/ThirdParty/IOS
 
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: Mac-sdk
           path: plugin-dev/Source/ThirdParty/Mac
 
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: Linux-sdk
           path: plugin-dev/Source/ThirdParty/Linux
 
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: Win64-sdk
           path: plugin-dev/Source/ThirdParty/Win64
@@ -97,7 +97,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download packages
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: ${{ github.sha }}
 
@@ -143,7 +143,7 @@ jobs:
 
       - name: Start Docker container
         run: |
-          echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          echo ${{ secrets.DOCKER_TOKEN }} >> $GITHUB_OUTPUT | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           # We start the container with the user ID of the parent GH action user to avoid permission issues on volume.
           uid=$(id -u) # the GH action user ID
           gid=1000     # the ue4 group in the docker container
