--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
       fail-fast: false
       matrix:
         # Note: these versions must match scripts/packaging/engine-versions.txt
-        unreal: ['5.0', '5.1', '5.2']
+        unreal: ['5.1', '5.2']
         app: ['sample']
 
     steps:
