--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: package-plugin-workflow
 
-on: push
+on: 
+  push:
+    paths-ignore:
+      - "**.md"
+      - "**ue-docker.yml"
 
 jobs:
   android-sdk:
