--- a/.github/workflows/ue-docker-linux.yml
+++ b/.github/workflows/ue-docker-linux.yml
@@ -32,7 +32,7 @@ env:
 jobs:
   build:
     name: 'Build for UE ${{ inputs.ue_version }}'
-    runs-on: windows-latest-32-cores
+    runs-on: ubuntu-latest-4-cores
 
     permissions:
       contents: read
@@ -45,13 +45,27 @@ jobs:
       # Building docker images for newer UE versions may require extra disk space
       - name: Clean up disk space before Docker build
         if: ${{ inputs.clean_disk == true }}
-        shell: pwsh
         run: |
-          .\scripts\clean-storage-win.ps1
-
-      - name: Set Docker to use Linux containers
-        run: |
-          & 'C:\Program Files\Docker\Docker\DockerCli.exe' -SwitchLinuxEngine
+          # time df -h
+          sudo time swapoff -a
+          sudo time rm -f /swapfile
+          sudo time rm -rf /usr/local/lib/android
+          sudo time rm -rf /usr/share/dotnet
+          sudo time rm -rf /usr/share/swift
+          sudo time rm -rf /usr/local/share/powershell
+          sudo time rm -rf /usr/local/.ghcup
+          sudo time rm -rf /usr/local/lib/node_modules
+          sudo time rm -rf /usr/local/share/boost
+          sudo time rm -rf /usr/lib/google-cloud-sdk
+          sudo time rm -rf /usr/lib/jvm
+          sudo time rm -rf /opt/pipx
+          sudo time rm -rf /opt/ghc
+          sudo time rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo time apt-get clean
+          sudo time rm -rf /var/lib/apt/lists/*
+          # time docker rmi $(docker image ls -aq)
+          # time du --max-depth=3 --threshold=100M -h /usr /opt /var 2>/dev/null | sort -hr
+          df -h
 
       - name: Set up Python
         uses: actions/setup-python@v4
