--- a/plugin-dev/Sentry.uplugin
+++ b/plugin-dev/Sentry.uplugin
@@ -41,14 +41,14 @@
 			"if [ $(TargetPlatform) = \"Mac\" ] && [ ! -f \"$(PluginDir)/Binaries/Mac/sentry.dylib\" ]; then\n cp \"$(PluginDir)/Source/ThirdParty/Mac/bin/sentry.dylib\" \"$(PluginDir)/Binaries/Mac/sentry.dylib\"\nfi",
 			"ENGINE_VERSION=$(grep -o '\"EngineAssociation\": *\"[^\"]*\"' \"$(ProjectFile)\" | cut -d'\"' -f4)",
 			"if [[ \"${ENGINE_VERSION:0:1}\" == \"4\" ]]; then\n EDITOR_EXE=\"$(EngineDir)/Binaries/Mac/UE4Editor\"\nelse\n EDITOR_EXE=\"$(EngineDir)/Binaries/Mac/UnrealEditor\"\nfi",
-			"echo \"Sentry: Executing commandlet: $EDITOR_EXE $(ProjectFile) -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -project-dir=$(ProjectDir) -plugin-dir=$(PluginDir) -unattended -nopause -nullrhi\"",
-			"\"$EDITOR_EXE\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -project-dir=\"$(ProjectDir)\" -plugin-dir=\"$(PluginDir)\" -unattended -nopause -nullrhi"
+			"echo \"Sentry: Executing commandlet: $EDITOR_EXE $(ProjectFile) -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi\"",
+			"\"$EDITOR_EXE\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi"
 		],
 		"Linux": [
 			"ENGINE_VERSION=$(grep -o '\"EngineAssociation\": *\"[^\"]*\"' \"$(ProjectFile)\" | cut -d'\"' -f4)",
 			"if [[ \"${ENGINE_VERSION:0:1}\" == \"4\" ]]; then\n EDITOR_EXE=\"$(EngineDir)/Binaries/Linux/UE4Editor\"\nelse\n EDITOR_EXE=\"$(EngineDir)/Binaries/Linux/UnrealEditor\"\nfi",
-			"echo \"Sentry: Executing commandlet: $EDITOR_EXE $(ProjectFile) -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -project-dir=$(ProjectDir) -plugin-dir=$(PluginDir) -unattended -nopause -nullrhi\"",
-			"\"$EDITOR_EXE\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -project-dir=\"$(ProjectDir)\" -plugin-dir=\"$(PluginDir)\" -unattended -nopause -nullrhi"
+			"echo \"Sentry: Executing commandlet: $EDITOR_EXE $(ProjectFile) -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi\"",
+			"\"$EDITOR_EXE\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi"
 		],
 		"Win64": [
 			"setlocal enabledelayedexpansion", 
@@ -59,8 +59,8 @@
 			"for /f \"tokens=2 delims=:, \" %%i in ('type \"$(ProjectFile)\" ^| findstr /C:\"EngineAssociation\"') do set \"ENGINE_VERSION=%%~i\"",
 			"set \"ENGINE_VERSION=!ENGINE_VERSION:~0,1!\"",
 			"if \"!ENGINE_VERSION!\"==\"4\" (set \"EDITOR_EXE=$(EngineDir)/Binaries/Win64/UE4Editor-Cmd.exe\") else (set \"EDITOR_EXE=$(EngineDir)/Binaries/Win64/UnrealEditor-Cmd.exe\")",
-			"echo Sentry: Executing commandlet: \"!EDITOR_EXE!\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -project-dir=\"$(ProjectDir)\" -plugin-dir=\"$(PluginDir)\" -unattended -nopause -nullrhi",
-			"\"!EDITOR_EXE!\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -project-dir=\"$(ProjectDir)\" -plugin-dir=\"$(PluginDir)\" -unattended -nopause -nullrhi",
+			"echo Sentry: Executing commandlet: \"!EDITOR_EXE!\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi",
+			"\"!EDITOR_EXE!\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi",
 			"endlocal"
 		]
 	}
