--- a/plugin-dev/Sentry.uplugin
+++ b/plugin-dev/Sentry.uplugin
@@ -45,7 +45,8 @@
 			"\"$EDITOR_EXE\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi"
 		],
 		"Linux": [
-			"ENGINE_VERSION=$(grep -o '\"EngineAssociation\": *\"[^\"]*\"' \"$(ProjectFile)\" | cut -d'\"' -f4)",
+			"PROJECT_FILE=\"$(ProjectFile)\"",
+			"ENGINE_VERSION=$(grep -o '\"EngineAssociation\": *\"[^\"]*\"' \"$PROJECT_FILE\" | cut -d'\"' -f4)",
 			"if [ \"$(printf %.1s \"$ENGINE_VERSION\")\" = \"4\" ]; then EDITOR_EXE=\"$(EngineDir)/Binaries/Linux/UE4Editor\"; else EDITOR_EXE=\"$(EngineDir)/Binaries/Linux/UnrealEditor\"; fi",
 			"echo \"Sentry: Executing commandlet: \\\"$EDITOR_EXE\\\" \\\"$(ProjectFile)\\\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi\"",
 			"\"$EDITOR_EXE\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi"
