--- a/plugin-dev/Sentry.uplugin
+++ b/plugin-dev/Sentry.uplugin
@@ -31,38 +31,22 @@
 	"PreBuildSteps":
 	{
 		"Mac": [
-			"if [ -f \"$(PluginDir)/Scripts/upload-debug-symbols.sh\" ]; then\n chmod +x \"$(PluginDir)/Scripts/upload-debug-symbols.sh\" \nfi",
-			"if [ -f \"$(PluginDir)/Source/ThirdParty/CLI/sentry-cli-Darwin-universal\" ]; then\n chmod +x \"$(PluginDir)/Source/ThirdParty/CLI/sentry-cli-Darwin-universal\" \nfi"
+			"chmod +x \"$(PluginDir)/Scripts/post-build-steps-mac.sh\""
+		],
+		"Linux": [
+			"chmod +x \"$(PluginDir)/Scripts/post-build-steps-linux.sh\""
 		]
 	},
 	"PostBuildSteps":
 	{
 		"Mac": [
-			"if [ $(TargetPlatform) = \"Mac\" ] && [ ! -f \"$(PluginDir)/Binaries/Mac/sentry.dylib\" ]; then\n cp \"$(PluginDir)/Source/ThirdParty/Mac/bin/sentry.dylib\" \"$(PluginDir)/Binaries/Mac/sentry.dylib\"\nfi",
-			"ENGINE_VERSION=$(grep -o '\"EngineAssociation\": *\"[^\"]*\"' \"$(ProjectFile)\" | cut -d'\"' -f4)",
-			"if [[ \"${ENGINE_VERSION:0:1}\" == \"4\" ]]; then\n EDITOR_EXE=\"$(EngineDir)/Binaries/Mac/UE4Editor\"\nelse\n EDITOR_EXE=\"$(EngineDir)/Binaries/Mac/UnrealEditor\"\nfi",
-			"echo \"Sentry: Executing commandlet: $EDITOR_EXE $(ProjectFile) -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi\"",
-			"\"$EDITOR_EXE\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi"
+			"\"$(PluginDir)/Scripts/post-build-steps-mac.sh\" $(TargetPlatform) $(TargetName) $(TargetType) $(TargetConfiguration) \"$(ProjectFile)\" \"$(PluginDir)\" \"$(EngineDir)\""
 		],
 		"Linux": [
-			"PROJECT_FILE=\"$(ProjectFile)\"",
-			"ENGINE_VERSION=$(grep -o '\"EngineAssociation\": *\"[^\"]*\"' \"$PROJECT_FILE\" | cut -d'\"' -f4)",
-			"if [ \"$(printf %.1s \"$ENGINE_VERSION\")\" = \"4\" ]; then EDITOR_EXE=\"$(EngineDir)/Binaries/Linux/UE4Editor\"; else EDITOR_EXE=\"$(EngineDir)/Binaries/Linux/UnrealEditor\"; fi",
-			"echo \"Sentry: Executing commandlet: \\\"$EDITOR_EXE\\\" \\\"$(ProjectFile)\\\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi\"",
-			"\"$EDITOR_EXE\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi"
+			"\"$(PluginDir)/Scripts/post-build-steps-linux.sh\" $(TargetPlatform) $(TargetName) $(TargetType) $(TargetConfiguration) \"$(ProjectFile)\" \"$(PluginDir)\" \"$(EngineDir)\""
 		],
 		"Win64": [
-			"setlocal enabledelayedexpansion", 
-			"set \"CRASHPAD_HANDLER_LINUX=$(PluginDir)/Binaries/Linux/crashpad_handler\"",
-			"if \"$(TargetPlatform)\"==\"Linux\" (\n if not exist \"%CRASHPAD_HANDLER_LINUX%\" (xcopy \"$(PluginDir)/Source/ThirdParty/Linux/bin/*\" \"$(PluginDir)/Binaries/Linux/\" /F /R /Y /I)\n)",
-			"set \"CRASHPAD_HANDLER_WIN=$(PluginDir)/Binaries/Win64/crashpad_handler.exe\"",
-			"if \"$(TargetPlatform)\"==\"Win64\" (\n if not exist \"%CRASHPAD_HANDLER_WIN%\" (xcopy \"$(PluginDir)/Source/ThirdParty/Win64/Crashpad/bin/*\" \"$(PluginDir)/Binaries/Win64/\" /F /R /Y /I)\n)",
-			"for /f \"tokens=2 delims=:, \" %%i in ('type \"$(ProjectFile)\" ^| findstr /C:\"EngineAssociation\"') do set \"ENGINE_VERSION=%%~i\"",
-			"set \"ENGINE_VERSION=!ENGINE_VERSION:~0,1!\"",
-			"if \"!ENGINE_VERSION!\"==\"4\" (set \"EDITOR_EXE=$(EngineDir)/Binaries/Win64/UE4Editor-Cmd.exe\") else (set \"EDITOR_EXE=$(EngineDir)/Binaries/Win64/UnrealEditor-Cmd.exe\")",
-			"echo Sentry: Executing commandlet: \"!EDITOR_EXE!\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi",
-			"\"!EDITOR_EXE!\" \"$(ProjectFile)\" -run=SentrySymbolUpload -target-platform=$(TargetPlatform) -target-name=$(TargetName) -target-type=$(TargetType) -target-configuration=$(TargetConfiguration) -unattended -nopause -nullrhi",
-			"endlocal"
+			"\"$(PluginDir)/Scripts/post-build-steps-win.bat\" $(TargetPlatform) $(TargetName) $(TargetType) $(TargetConfiguration) \"$(ProjectFile)\" \"$(PluginDir)\" \"$(EngineDir)\""
 		]
 	}
 }
